@@ -1,10 +1,12 @@
 2020-02-06  Charlie Zender  <zender@uci.edu>
 
-	* ncremap allow --prs_stt=integral to work with -P mpas
+	* nco_vrt_ntp() set horizontal grd_sz_in, grd_sz_out correctly for grd_in_prs
 
 	* NCO 4.9.2-alpha08 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha08: Vasisthasana';git push
-	git tag -a 4.9.2-alpha08 -m 'ncks eliminate alarmist WARNINGS on regional grids, EASE area == 0.0 WARNINGS';git push --tags
+	git tag -a 4.9.2-alpha08 -m 'ncks eliminate alarmist WARNINGS on regional grids, EASE area == 0.0 WARNINGS;ncremap -P mpas --prs_stt=integral works';git push --tags
+
+	* ncremap allow --prs_stt=integral to work with -P mpas
 
 	* Clarify treatment of PS during vertical interpolation
 
